<resources>
    <string name="app_name">Event Moi Ça</string>
    <string name="title_home">Événements</string>
    <string name="title_organizer">Organisateur</string>
    <string name="title_participation">Participation</string>
    <string name="title_detail_photo">Photo</string>
    <string name="title_detail_event">Détail d\'un événement</string>
    <string name="title_profile">Profil</string>
    <string name="title_event_map">Carte</string>
    <string name="title_invitation">Invitation</string>
    <string name="title_list_participants">Participants</string>
    <string name="title_share">Share</string>
    <string name="title_edit_detail_event">Editer un événement</string>
    <string name="toast_welcome_user_main_activity">Bienvenue %s</string>
    <string name="tv_description_authentification_activity">Se connecter ou s\'inscrire</string>
    <string name="ti_login_authentification_activity">Connexion</string>
    <string name="ti_signup_authentification_activity">Inscription</string>
    <string name="login_fragment_error_emplty">Vous devez compléter tous les champs.</string>
    <string name="tv_email_login_fragment">E-mail</string>
    <string name="tv_password_login_fragment">Mot de passe</string>
    <string name="b_signin_login_fragment">Se connecter</string>
    <string name="tv_reset_password_authentification_activity">Mot de passe oublié ?</string>
    <string name="t_empty_email_reset_password_dialog_fragment">Saisissez l\'e-mail associé au compte pour réinitialiser le mot de passe.</string>
    <string name="tv_title_reset_password_fragment">Mot de passe oublié</string>
    <string name="tv_message_reset_password_fragment">Saisissez l\'e-mail associé au compte pour réinitialiser le mot de passe.</string>
    <string name="tv_lastname_signup_fragment">Nom</string>
    <string name="tv_firstname_signup_fragment">Prénom</string>
    <string name="tv_email_signup_fragment">E-mail</string>
    <string name="tv_confirm_password_signup_fragment">Confirmation du mot de passe</string>
    <string name="b_signup_signup_fragment">S\'inscrire</string>
    <string name="fab_qrcode_title">Scanner un QR Code</string>
    <string name="fab_add_event_title">Ajouter un événement</string>
    <string name="filter">Filtre</string>
    <string name="search">Search</string>
    <string name="tv_no_invitation_fragment">Vous n\'avez aucun événement à venir.</string>
    <string name="tv_hint_search_event_map">Rechercher un lieu...</string>
    <string name="cb_filter_invitation_dialog_fragment">Invitation</string>
    <string name="cb_filter_participate_dialog_fragment">Participation</string>
    <string name="cb_filter_organizer_dialog_fragment">Organisateur</string>
    <string name="tv_filter_dialog_fragment">Filtrer par …</string>
    <string name="tv_state_invited">Je suis invité</string>
    <string name="tv_state_participate">Je participe</string>
    <string name="tv_state_organizer">J\'organise</string>
    <string name="tv_organizer_add_event_fragment">Nom de l\'organisateur</string>
    <string name="tv_name_add_event_fragment">Nom de l\'événement</string>
    <string name="tv_description_add_event_fragment">Description</string>
    <string name="chip_date_start_add_event_fragment">Choisir la date de début</string>
    <string name="chip_date_end_add_event_fragment">Choisir la date de fin</string>
    <string name="b_validate_add_event_fragment">Créer l\'événement</string>
    <string name="error_empty_field_add_event_fragment">Vous n\'avez pas complété tous les champs</string>
    <string name="error_date_add_event_fragment">La date de fin doit être supérieure à la date de début</string>
    <string name="toolbar_add_event_fragment_add_event">Ajouter un événement</string>
    <string name="tv_place_add_event_fragment">Lieu de l\'événement</string>
    <string name="navigation_camera_detail_event_fragment">Photo</string>
    <string name="navigation_gallery_detail_event_fragment">Galerie</string>
    <string name="download_all_pictures_from_one_event">Tout télécharger</string>
    <string name="detail_event_organisateur">Organisateur :</string>
    <string name="detail_event_startDate">Date de début :</string>
    <string name="detail_event_endDate">Date de fin :</string>
    <string name="b_exit_detail_event_fragment">Quitter l\'événement</string>
    <string name="b_edit_detail_event_fragment">Editer l\'événement</string>
    <string name="tv_dialogTitle_detail_event_fragment">Quitter l\'événement</string>
    <string name="tv_dialogMessage_detail_event_fragment">Voulez-vous vraiment quitter l\'événement ?</string>
    <string name="tv_dialogCancel_detail_event_fragment">Non</string>
    <string name="tv_dialogValidate_detail_event_fragment">Oui</string>
    <string name="exit_event_toast_detail_event_fragment">Vous avez quitté l\'événement.</string>
    <string name="b_delete_detail_event_fragment">Supprimer l\'événement</string>
    <string name="tv_delete_event_detail_event_fragment">Supprimer l\'événement</string>
    <string name="tv_delete_event_message_detail_event_fragment">Voulez-vous supprimer votre événement ?</string>
    <string name="tv_delete_event_cancel_detail_event_fragment">Non</string>
    <string name="tv_delete_event_valider_detail_event_fragment">Oui</string>
    <string name="tv_delete_event_toast_detail_event_fragment">L\'événement a été supprimé avec succès.</string>
    <string name="ToastRemoveParticipant">Le participant a été retiré</string>
    <plurals name="participants">
        <item quantity="one">%1$d participant</item>
        <item quantity="other">%1$d participants</item>
    </plurals>
    <string name="tv_place_detail_event_fragment">Adresse :</string>
    <string name="TitleListParticipants">Voici les participants à l\'événement</string>
    <string name="tv_delete_comment_choice">Supprimer</string>
    <string name="tv_report_comment_choice">Signaler</string>
    <string name="tv_edit_comment_choice">Editer</string>
    <string name="tv_like_comment_choice">J\'aime</string>
    <string name="tv_dislike_comment_choice">Je n\'aime plus</string>
    <string name="switch_activate_detail_event_fragment">Activé</string>
    <string name="switch_desactivate_detail_event_fragment">Désactivé</string>
    <string name="tv_not_already_accepted_alert">Vous n\'avez pas encore accepté cet événement</string>
    <string name="tv_no_pictures_detail_event_fragment">Il n\'y a pas encore de photos dans cet événement</string>
    <string name="delete_picture_fab_title">Supprimer</string>
    <string name="save_image_fab_title">Télécharger</string>
    <string name="picture_downloaded_toast">Image téléchargée.</string>
    <string name="error_on_download_toast">Une erreur est survenue lors du téléchargement.</string>
    <string name="picture_deleted">Image supprimée.</string>
    <string name="unable_to_delete_picture">Impossible de supprimer l\'image : %s</string>
    <string name="picture_authorized_by_admin">Photo autorisée par l\'administrateur.</string>
    <string name="add_comment_to_photo">Ajouter un commentaire…</string>
    <string name="detail_photo_fragment_fab_signaler">Signaler</string>
    <string name="notification_message_title">Une photo a été signalée sur un événement</string>
    <string name="picture_already_reported">photo déjà signalée</string>
    <string name="problem_occured_during_download">Un problème a eut lieu lors du signalement. Merci de réessayer.</string>
    <string name="detail_photo_fragment_authorize_photo">Autoriser la Photo</string>
    <string name="detail_photo_fragment_toast_commentaire_error">Veuillez saisir un commentaire.</string>
    <string name="detail_photo_fragment_comment_added">Commentaire publié</string>
    <string name="detail_photo_fragment_comment_reported">Le commentaire a été signalé à l\'organisateur</string>
    <string name="tv_title_dialog_logout">Déconnexion</string>
    <string name="tv_message_dialog_logout">Voulez-vous vraiment vous déconnecter ?</string>
    <string name="tv_title_dialog_delete_account">Supprimer mon compte</string>
    <string name="tv_message_dialog_delete_account">Voulez-vous vraiment supprimer votre compte ?</string>
    <string name="tv_number_invitation_profile_fragment">Invitation : %d</string>
    <string name="tv_number_participate_profile_fragment">Participation : %d</string>
    <string name="tv_number_organizer_profile_fragment">Organisateur : %d</string>
    <string name="picture_reported_to_owner">La photo a été signalée à l\'organisateur.</string>
    <string name="profile_picture_choice_title">Pour votre photo de profil :</string>
    <string name="b_cancel_dialog">Annuler</string>
    <string name="b_validate_dialog">Valider</string>
    <string name="tv_click_window_info_map">Cliquez ici pour avoir les détails</string>
    <string name="selectEventToShare">Choisissez l\'évenement de publication :</string>
    <string name="b_copy_link_qrcode_activity">Copier le lien</string>
    <string name="b_share_link_qrcode_activity">Partager le lien</string>
    <string name="b_share_qrcode_activity">Partager le QR Code</string>
    <string name="title_share_link_qrcode_activity">Event moi ça</string>
    <string name="message_share_link_qrcode_activity">Je vous invite à mon événement où vous retrouverez toutes les informations sur l\'application "Event moi" ça via ce lien: %s</string>
    <string name="title_share_intent_qrcode_activity">Partager</string>
    <string name="title_copy_qrcode_activity">Copier</string>
    <string name="tv_link_copied_qrcode_activity">Le lien a été copié</string>
    <string name="chip_adresse">Veuillez choisir une adresse</string>
</resources>