<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
            android:id="@+id/action_filter"
            android:icon="@drawable/ic_filter"
            android:title="@string/filter"
            android:menuCategory="alternative"
            app:showAsAction="always"/>

    <item
            android:id="@+id/action_qr_code"
            android:icon="@drawable/ic_load_qrcode"
            android:title="@string/title_qr_code"
            android:menuCategory="alternative"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_edit_event"
            android:icon="@drawable/ic_edit"
            android:title="@string/b_edit_detail_event_fragment"
            android:menuCategory="alternative"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_delete_event"
            android:icon="@drawable/ic_delete"
            android:title="@string/b_delete_detail_event_fragment"
            android:menuCategory="alternative"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_quit_event"
            android:icon="@drawable/ic_cancel"
            android:title="@string/b_exit_detail_event_fragment"
            android:menuCategory="alternative"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_delete_photo"
            android:icon="@drawable/ic_delete"
            android:menuCategory="alternative"
            android:title="@string/delete_picture_fab_title"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_report"
            android:icon="@drawable/ic_report_problem"
            android:menuCategory="alternative"
            android:title="@string/detail_photo_fragment_fab_signaler"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_download_photo"
            android:icon="@drawable/ic_file_download"
            android:menuCategory="alternative"
            android:title="@string/save_image_fab_title"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_validate_photo"
            android:icon="@drawable/ic_validate"
            android:menuCategory="alternative"
            android:title="@string/detail_photo_fragment_authorize_photo"
            app:showAsAction="never"/>

</menu>
