<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_list_participants"
            android:icon="@drawable/ic_list"
            android:orderInCategory="1"
            android:title="@string/title_list_participants"/>

    <item
            android:id="@+id/action_camera"
            android:icon="@drawable/ic_camera"
            android:orderInCategory="2"
            android:title="@string/navigation_camera_detail_event_fragment"/>

    <item
            android:id="@+id/action_gallery"
            android:icon="@drawable/ic_galery"
            android:orderInCategory="2"
            android:title="@string/navigation_gallery_detail_event_fragment"/>

    <item
            android:id="@+id/action_invitation"
            android:icon="@drawable/ic_share"
            android:orderInCategory="3"
            android:title="@string/title_invitation"/>

</menu>
