<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_edit_event"
            android:icon="@drawable/ic_edit"
            android:title="@string/b_edit_detail_event_fragment"
            android:menuCategory="alternative"
            android:visible="false"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_delete_event"
            android:icon="@drawable/ic_delete"
            android:title="@string/b_delete_detail_event_fragment"
            android:menuCategory="alternative"
            android:visible="false"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_quit_event"
            android:icon="@drawable/ic_cancel"
            android:title="@string/b_exit_detail_event_fragment"
            android:menuCategory="alternative"
            android:visible="false"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_download_all_pictures"
            android:icon="@drawable/ic_file_download"
            android:orderInCategory="3"
            android:title="@string/download_all_pictures_from_one_event"/>

</menu>
