<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_delete_photo"
            android:icon="@drawable/ic_delete"
            android:menuCategory="alternative"
            android:title="@string/delete_picture_fab_title"
            android:visible="false"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_report_photo"
            android:icon="@drawable/ic_report_problem"
            android:menuCategory="alternative"
            android:title="@string/detail_photo_fragment_fab_signaler"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_download_photo"
            android:icon="@drawable/ic_file_download"
            android:menuCategory="alternative"
            android:title="@string/save_image_fab_title"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_validate_photo"
            android:icon="@drawable/ic_validate"
            android:menuCategory="alternative"
            android:title="@string/detail_photo_fragment_authorize_photo"
            android:visible="false"
            app:showAsAction="never"/>

</menu>
