<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:padding="16dp"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <TextView android:id="@+id/tv_title_filter_dialog_fragment"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/SubtitleBlack"
              android:text="@string/tv_filter_dialog_fragment"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:id="@+id/b_validate_dialog_fragment"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_validate_black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_filter_invitation_dialog_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_filter_invitation_dialog_fragment"
            android:buttonTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/tv_title_filter_dialog_fragment"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_filter_participate_dialog_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_filter_participate_dialog_fragment"
            android:buttonTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/cb_filter_invitation_dialog_fragment"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_filter_organizer_dialog_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_filter_organizer_dialog_fragment"
            android:buttonTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/cb_filter_participate_dialog_fragment"
            app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>