<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name_edit_event_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:id="@+id/et_name_edit_event_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_name_add_event_fragment"
                android:maxLength="100"
                android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/chip_place_edit_event_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chip_adresse"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            app:iconTint="@color/black"
            app:icon="@drawable/ic_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_description_edit_event_fragment"
            />


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description_edit_event_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_name_edit_event_fragment">

        <EditText
                android:id="@+id/et_description_edit_event_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_description_add_event_fragment"
                android:inputType="textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.chip.Chip
            android:id="@+id/chip_date_start_edit_event_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/chip_date_start_add_event_fragment"
            app:chipBackgroundColor="@color/colorAccent"
            app:chipIcon="@drawable/ic_calendar"
            android:textAlignment="center"
            app:chipStartPadding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_place_edit_event_fragment"/>

    <com.google.android.material.chip.Chip
            android:id="@+id/chip_date_end_edit_event_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/chip_date_end_add_event_fragment"
            app:chipBackgroundColor="@color/colorAccent"
            app:chipIcon="@drawable/ic_calendar"
            app:chipStartPadding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_date_start_edit_event_fragment"/>

    <Button
            android:id="@+id/b_validate_edit_event_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/b_validate_dialog"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_date_end_edit_event_fragment"
            />

</androidx.constraintlayout.widget.ConstraintLayout>
